# curve_laba

./: CMakeLists.txt  README.md  curve.c  curve.h  curve_laba  main.c  point.c  point.h
